<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    tools:context=".Complete">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_margin="20dp">

    <ImageView
        android:id="@+id/iself"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginStart="106dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="106dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/lokii"
        app:layout_constraintBottom_toTopOf="@+id/tname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tname"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:layout_marginTop="26dp"
            android:text="Lokeshwar Jakhar"
            android:textAlignment="center"
            android:textSize="35sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iself" />

        <TextView
            android:id="@+id/tintro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="45dp"
            android:layout_marginEnd="9dp"
            android:layout_marginBottom="27dp"
            android:text="@string/intro"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/textView21"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tname" />

        <TextView
            android:id="@+id/textView21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="130dp"
            android:text="Basic Details:"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tintro" />

        <TextView
            android:id="@+id/basic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="19dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="32dp"
            android:text="@string/details"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView21" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="50dp"
            android:text="Educational Records"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/basic" />

        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:showDividers="middle"
            android:stretchColumns="*"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView">


            <TableRow android:background="@drawable/header_shape">

                <TextView

                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Institute"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView

                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Studied"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView

                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Scored"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView

                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Year"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </TableRow>

            <TableRow android:background="@drawable/cell_shape">

                <TextView

                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Parul University"
                    android:textAlignment="center"
                    android:textSize="17sp" />

                <TextView

                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="3rd year"
                    android:textAlignment="center"
                    android:textSize="17sp" />

                <TextView

                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="7.50 CGPA"
                    android:textAlignment="center"
                    android:textSize="17sp" />

                <TextView

                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="2020-23"
                    android:textAlignment="center"
                    android:textSize="17sp" />

            </TableRow>

            <TableRow
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:background="@drawable/cell_shape">

                <TextView

                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Lancers Army School"
                    android:textAlignment="center"
                    android:textSize="17sp" />

                <TextView

                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="HSC"
                    android:textAlignment="center"
                    android:textSize="17sp" />

                <TextView

                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="78.4%"
                    android:textAlignment="center"
                    android:textSize="17sp" />


                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="2020"
                    android:textAlignment="center"
                    android:textSize="17sp" />

            </TableRow>

            <TableRow
                android:layout_width="100dp"
                android:background="@drawable/cell_shape">

                <TextView

                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Shree Vashistha Vidhyalya"
                    android:textAlignment="center"
                    android:textSize="17sp" />

                <TextView

                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="SSC"
                    android:textAlignment="center"
                    android:textSize="17sp" />

                <TextView

                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="74.2%"
                    android:textAlignment="center"
                    android:textSize="17sp" />


                <TextView

                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="2018"
                    android:textAlignment="center"
                    android:textSize="17sp" />

            </TableRow>
        </TableLayout>

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="180dp"
            android:text="Internships"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.184"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="141dp"
            android:layout_marginBottom="12dp"
            android:text="&#8226; Assistant Teacher"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textView10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />


        <TextView
            android:id="@+id/textView10"
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:layout_marginStart="66dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="45dp"
            android:text="@string/intern1"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8" />

        <TextView
            android:id="@+id/textView81"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="12dp"
            android:text="&#8226; Buisness Development Intern"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textView100"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView10" />

        <TextView
            android:id="@+id/textView100"
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="41dp"
            android:text="@string/intern2"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView81" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="46dp"
            android:layout_marginEnd="160dp"
            android:text="Achivements"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView100" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="49dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="62dp"
            android:text="@string/achi"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView12" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="245dp"
            android:text="Workshops"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.125"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView11" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="49dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="62dp"
            android:text="&#8226; Attended 2 months workshop of Mobile App Development using Android by Parul University
        \n\n&#8226; Attended 2 days workshop of Build Instagram clone from Scratch using Android by Parul University
        \n\n&#8226; Attended 5 days workshop of Product Design Training by Parul University
        \n\n&#8226; Completed course of 'Successful Negotiation: Essential Strategies and Skills' by Michellen University from Coursera"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView13" />

        <TextView
            android:id="@+id/textView18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="58dp"
            android:text="Roles and responsibilities"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView17" />

        <TextView
            android:id="@+id/ext"
            android:layout_width="350sp"
            android:layout_height="wrap_content"
            android:layout_marginStart="49dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="429dp"
            android:text=" &#8226; Acted as Coordinator in workshop of School of Leadership by ChatraSansad
        \n\n&#8226; Selected as Coordinator in Gujarats largest TechFest Projection 2023
        \n\n&#8226; Participated as Volunteer in Dhoom at Parul University's Annual Fest
        \n\n&#8226; Core member of organization team of Smart India Hackathon"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView18" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="51dp"
            android:text="Personal Interest/Hobbies"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ext" />

        <TextView
            android:id="@+id/textView20"
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:layout_marginStart="49dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="62dp"
            android:text="&#8226;Badminton
        \n\n&#8226;Speed skating
        \n\n&#8226;Rap music
        \n\n&#8226;E sports
        \n\n&#8226;Free style dancing"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView19" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>